--- a/Programmania/Views/Course/Disciplines.cshtml
+++ b/Programmania/Views/Course/Disciplines.cshtml
@@ -1,28 +1,28 @@
 ﻿@using Programmania.HtmlHelpers;
 @model IEnumerable<Programmania.ViewModels.UserDisciplineVM>;
 
-<ht ml>
- <head>
-  <title>Disciplines</title>
-  <met a charset="utf-8" />
-  <met a name="viewport" content="width=device-width, initial-scale=1" />
-  <sc ript src="~/js/loading-bar.min.js"></sc>
-  <li nk rel="stylesheet" href="~/css/loading-bar.min.css" />
-  <li nk rel="stylesheet" href="~/css/Disciplines.css" />
+<html>
+<head>
+    <title>Disciplines</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <script src="~/js/loading-bar.min.js"></script>
+    <link rel="stylesheet" href="~/css/loading-bar.min.css" />
+    <link rel="stylesheet" href="~/css/Disciplines.css" />
 
-  <sc ript src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></sc>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 
-  <li nk href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-   <sc ript src="https://unpkg.com/aos@2.3.1/dist/aos.js"></sc>
- </head>
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+</head>
 
- <body>
-  <div class="header-text">
-   <a href="Courses">
-    <div class="back">
+<body>
+    <div class="header-text">
+        <a href="Courses">
+            <div class="back">
 
-    </div>
-   </a>
+            </div>
+        </a>
 
         <div class="header-text__content">
             <h3>C# Course</h3>
@@ -33,21 +33,22 @@
         <img src="~/images/caio.jpg">
     </div>
 
-  <div class="content">
-   <div class="desciplines">
+    <div class="content">
+        <div class="desciplines">
+            @if (Model != null)
+            {
+                @foreach (var discipline in Model)
+                {
+                    @Html.CreateDiscipline(discipline);
+                }
+            }
+        </div>
+    </div>
 
-    @foreach (var discipline in Model)
-    {
-     Html.CreateDiscipline(discipline);
-    }
+    <script>
+        AOS.init();
+    </script>
 
-   </div>
-  </div>
-
-  <sc ript>
-   AOS.init();
-  </sc>
-
-  <sc ript type="text/javascript" src="~/js/disciplines.js"></sc>
- </body>
- </html>
+    <script type="text/javascript" src="~/js/disciplines.js"></script>
+</body>
+</html>
