--- a/Programmania/wwwroot/css/Profile.css
+++ b/Programmania/wwwroot/css/Profile.css
@@ -90,25 +90,24 @@ h6 {
 }
 
 /*----------------------------*/
-
 @font-face {
-    font-family: monsterrat-thin;
-    src: url("fonts/Montserrat-Thin.ttf");
+    font-family: monsterrat-normal;
+    src: url("../fonts/Montserrat-Regular.ttf");
 }
 
 @font-face {
     font-family: monsterrat-light;
-    src: url("fonts/Montserrat-Light.ttf");
+    src: url("../fonts/Montserrat-Light.ttf");
 }
 
 @font-face {
-    font-family: monsterrat-normal;
-    src: url("fonts/Montserrat-Regular.ttf");
+    font-family: monsterrat-thin;
+    src: url("../fonts/Montserrat-Thin.ttf");
 }
 
 @font-face {
     font-family: monsterrat-bold;
-    src: url("fonts/Montserrat-Bold.ttf");
+    src: url("../fonts/Montserrat-Bold.ttf");
 }
 
 hr {
@@ -143,6 +142,7 @@ hr {
     .profile__image img {
         width: 100%;
         height: 100%;
+        cursor: pointer;
     }
 
 .profile-info {
@@ -179,6 +179,34 @@ hr {
     font-size: 2vh !important;
     font-family: "monsterrat-normal" !important;
     border-radius: 20px !important;
+}
+
+.modal {
+    padding: 10%;
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0,0,0,.4);
+}
+
+.modal-content {
+    font-family: 'mainFont';
+    position: relative;
+    background-color: #fefefe;
+    margin: auto;
+    padding: 0;
+    border: 1px solid #888;
+    width: 80%;
+    padding: 1% 2%;
+    font-size: 3vh;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
+    animation-name: animatetop;
+    animation-duration: 0.4s
 }
 
 .profile-col-2 {
