--- a/Programmania/Views/Home/Challenges.cshtml
+++ b/Programmania/Views/Home/Challenges.cshtml
@@ -1,52 +1,54 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
 <head>
-    <title>Challenges</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="~/css/Challenges.css">
+	<link rel="stylesheet" href="~/css/loading-bar.min.css">
+	<script src="~/js/loading-bar.min.js"></script>
+	<link rel="stylesheet" href="~/css/bulma.min.css">
+	<script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" />
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js"></script>
+	<link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css" />
+	<script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
 
-    <link rel="stylesheet" href="~/css/Challenges.css">
-    <link rel="stylesheet" href="~/css/HamburgerMenu.css">
+	<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
+	<link rel="stylesheet" href="~/css/HamburgerMenu.css" />
 
-
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+	<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+	<title>Challenges</title>
 </head>
 
 <body>
-    <header class="header">
-        <div class="container">
-            <div class="header__body">
-                <div class="header__burger">
-                    <span></span>
-                </div>
+	<header class="header">
+        <div class="header-container">
+            <div class="container__text">Programmania</div>
+            <div class="header__burger">
+                <span></span>
+            </div>
+            <div class="container-menu">
                 <nav class="header__menu">
                     <ul class="header__list">
                         <li>
-                            <a href="Main.html" class="header__link">Main</a>
+                            <a href="Main" class="header__link">Main</a>
                         </li>
 
                         <li>
-                            <a href="Courses.html" class="header__link">Courses</a>
+                            <a href="Courses" class="header__link">Courses</a>
                         </li>
 
                         <li>
-                            <a href="Codes.html" class="header__link">Codes</a>
+                            <a href="News" class="header__link">News</a>
                         </li>
 
                         <li>
-                            <a href="Challenges.html" class="header__link">Challenges</a>
+                            <a href="Challenges" class="header__link">Challenges</a>
                         </li>
 
                         <li>
-                            <a href="Profile.html" class="header__link">Profile</a>
-                        </li>
-
-                        <li>
-                            <a href="News.html" class="header__link">News</a>
+                            <a href="Profile" class="header__link">Profile</a>
                         </li>
                     </ul>
                 </nav>
@@ -54,92 +56,176 @@
         </div>
     </header>
 
-    <main>
-        <div class="content">
-            <div class="main">
-                <div class="row">
-                    <div class="col-md-8 mt-1">
-                        <div class="card fixedCard">
-                            <h3 class="titleText">Games history</h3>
+	<section class="main">
+		<!--USER INFO-->
+		<div class="user-statistic" data-aos="zoom-in" data-aos-duration="1000">
+			<div class="statistic">
+				<h3 class="statistic__wins">
+					Wins: 12/20
+				</h3>
 
-                            <div class="card-body">
-                                <div class="gameResult">
-                                    <button type="button" class="gameResult__btn gameResult__btn__win">Win 02.08.2021</button>
-                                    <div class="gameResult__content">
-                                        <h3>Questions: 20</h3>
-                                        <h3>Correct answers: 13</h3>
-                                        <h3>Earn XP: 3000</h3>
-                                        <h3>Difficult: hard</h3>
-                                        <h3>Discipline: multithreading</h3>
-                                    </div>
-                                </div>
+				<div class="statistic__percent">
+					<div class="ldBar label-center" style="width: 100%; height: 100%;" data-preset="circle" data-value="60"
+						data-transition-in="1000">
+
+					</div>
+				</div>
+
+				<div class="statistic__loses">
+					Loses: 8/20
+				</div>
+			</div>
+		</div>
+		<!--USER INFO-->
+
+		<div class="select-course" data-aos="fade-right" data-aos-duration="1000">
+			<label for="select-language">Select language: </label>
+			<div class="select is-info is-rounded">
+				<select name="select-language" id="" class="is-hovered">
+					<option value="C#">C#</option>
+					<option value="Java">Java</option>
+					<option value="Ruby">Ruby</option>
+				</select>
+			</div>
+		</div>
+
+		<!--OUTGOING MESSAGES-->
+		<h3 class="header__text" data-aos="aoom-in" data-aos-duration="1000">Users with whom you can compete</h3>
+		<div class="outgoing" data-aos="fade-right" data-aos-duration="1000">
+			<div class="swiper">
+				<div class="outgoing-challenges swiper-container">
+					<div class="swiper-wrapper">
+						<div class="swiper-slide">
+							<div class="challenge challenge_create">
+								<div class="challenge__image" style="background-image: url('images/pythonCourse.png');">
+
+								</div>
+
+								<div class="challenge-content">
+									<div class="challenge__avatar">
+										<img src="images/avatarImg.png" alt="Avatar image" />
+									</div>
+
+									<h3 class="challenge__username">John Johnson</h3>
+									<p class="challenge__info">Propose a challenge in Python language</p>
+									<a href="#">
+										<div class="challenge__button challenge__button_create">Create</div>
+									</a>
+								</div>
+							</div>
+						</div>
+
+						<div class="swiper-slide">
+							<div class="challenge challenge_create">
+								<div class="challenge__image" style="background-image: url('images/pythonCourse.png');">
+
+								</div>
+
+								<div class="challenge-content">
+									<div class="challenge__avatar">
+										<img src="images/avatarImg.png" alt="Avatar image" />
+									</div>
+
+									<h3 class="challenge__username">John Johnson</h3>
+									<p class="challenge__info">Propose a challenge in Python language</p>
+									<a href="#">
+										<div class="challenge__button challenge__button_create">Create</div>
+									</a>
+								</div>
+							</div>
+						</div>
+
+						<div class="swiper-slide">
+							<div class="challenge challenge_create">
+								<div class="challenge__image" style="background-image: url('images/pythonCourse.png');">
+
+								</div>
+
+								<div class="challenge-content">
+									<div class="challenge__avatar">
+										<img src="images/avatarImg.png" alt="Avatar image" />
+									</div>
+
+									<h3 class="challenge__username">John Johnson</h3>
+									<p class="challenge__info">Propose a challenge in Python language</p>
+									<a href="#">
+										<div class="challenge__button challenge__button_create">Create</div>
+									</a>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="swiper-button-prev"></div>
+					<div class="swiper-button-next"></div>
+				</div>
+			</div>
+		</div>
+		<!--OUTGOING MESSAGES-->
 
 
-                                <div class="gameResult">
-                                    <button type="button" class="gameResult__btn gameResult__btn__lose">Lose 02.08.2021</button>
-                                    <div class="gameResult__content">
-                                        <h3>Questions: 20</h3>
-                                        <h3>Correct answers: 13</h3>
-                                        <h3>Earn XP: 3000</h3>
-                                        <h3>Difficult: hard</h3>
-                                        <h3>Discipline: multithreading</h3>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+		<!--INCOMING CHALLENGES-->
+		<h3 class="header__text" data-aos="zoom-in" data-aos-duration="1000">Users who challenged you</h3>
+		<div class="incoming" data-aos="fade-right" data-aos-duration="1000">
+			<div class="challenge challenge_accept">
+				<div class="challenge__image" style="background-image: url('images/phpCourse.jpg');">
 
-                    <div class="col-md-4 mt-1">
-                        <div class="card">
-                            <h3 class="titleText">Personal states</h3>
-                            <div class="card-body">
-                                <div class="personalStates">
-                                    <h3>Games: 30</h3>
-                                    <h3>Wins: 21</h3>
-                                    <h3>Defeats: 9</h3>
-                                    <h3>XP earned: 35734</h3>
-                                </div>
+				</div>
+				<div class="challenge-content">
+					<div class="challenge__avatar">
+						<img src="images/avatarImg.png" alt="Avatar image" />
+					</div>
 
-                            </div>
-                        </div>
-                    </div>
+					<h3 class="challenge__username">Jack Jackson</h3>
+					<p class="challenge__info">Challenged you on the C# language</p>
+					<a href="#">
+						<div class="challenge__button challenge__button_accept">Accept</div>
+					</a>
+				</div>
+			</div>
 
-                </div>
+			<div class="challenge challenge_accept">
+				<div class="challenge__image" style="background-image: url('images/phpCourse.jpg');">
 
-                <div class="row">
-                    <div class="card">
-                        <h3 class="titleText">Games</h3>
-                        <div class="card-body">
+				</div>
+				<div class="challenge-content">
+					<div class="challenge__avatar">
+						<img src="images/avatarImg.png" alt="Avatar image" />
+					</div>
 
-                        </div>
-                    </div>
-                </div>
+					<h3 class="challenge__username">Jack Jackson</h3>
+					<p class="challenge__info">Challenged you on the C# language</p>
+					<a href="#">
+						<div class="challenge__button challenge__button_accept">Accept</div>
+					</a>
+				</div>
+			</div>
+
+			<div class="challenge challenge_accept">
+				<div class="challenge__image" style="background-image: url('images/phpCourse.jpg');">
+
+				</div>
+				<div class="challenge-content">
+					<div class="challenge__avatar">
+						<img src="images/avatarImg.png" alt="Avatar image" />
+					</div>
+
+					<h3 class="challenge__username">Jack Jackson</h3>
+					<p class="challenge__info">Challenged you on the C# language</p>
+					<a href="#">
+						<div class="challenge__button challenge__button_accept">Accept</div>
+					</a>
+				</div>
+			</div>
+		</div>
+		<div class="button__next button_incoming" data-aos="zoom-in" data-aos-duration="1000">Show more</div>
+		<!--INCOMING CHALLENGES-->
 
 
+	</section>
 
-            </div>
-        </div>
-
-    </main>
-
-    <script type="text/javascript" src="~/js/util/burger.js"></script>
-
-    <script type="text/javascript">
-        var coll = document.getElementsByClassName("gameResult__btn");
-        var i;
-
-        for (i = 0; i < coll.length; i++) {
-            coll[i].addEventListener('click', function () {
-                this.classList.toggle("active");
-                var content = this.nextElementSibling;
-                if (content.style.maxHeight) {
-                    content.style.maxHeight = null;
-                }
-                else {
-                    content.style.maxHeight = content.scrollHeight + "px";
-                }
-            })
-        }
-    </script>
+	<script src="~/js/util/outgoing-slider.js"></script>
+	<script type="text/javascript" src="~/js/util/burger.js"></script>
+	<script>AOS.init();</script>
 </body>
+
 </html>
